Добавил в инструкцию trino настройки для существующих ресурсов